--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,3 +13,6 @@
 # Build your Java project and run tests with Apache Maven.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
+
+trigger:
+- master
